--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,3 +13,16 @@
   justify-content: center;
   align-items: center;
 }
+
+.underline-animation::after {
+  content: "";
+  height: 3px;
+  background-color: black;
+  width: 0;
+  display: block;
+  transition: 0.4s;
+}
+
+.underline-animation:hover::after {
+  width: 100%;
+}
