--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&family=Smooch+Sans:wght@500;600;700&display=swap");
+
+html {
+  scroll-behavior: smooth;
+}
 
 @layer base {
   body {
     font-family: "Poppins", sans-serif;
   }
-}
 
-.flex-center {
-  justify-content: center;
-  align-items: center;
-}
+  .flex-center {
+    justify-content: center;
+    align-items: center;
+  }
 
-.underline-animation::after {
-  content: "";
-  height: 3px;
-  background-color: black;
-  width: 0;
-  display: block;
-  transition: 0.4s;
-}
+  .underline-animation::after {
+    content: "";
+    height: 3px;
+    background-color: black;
+    width: 0;
+    display: block;
+    transition: 0.4s;
+  }
 
-.underline-animation:hover::after {
-  width: 100%;
+  .underline-animation:hover::after {
+    width: 100%;
+  }
+
+  .underline-animation-unique::after {
+    content: "";
+    height: 3px;
+    background-color: rgb(149, 57, 255);
+    width: 0;
+    display: block;
+    transition: 0.4s;
+  }
+
+  .underline-animation-unique:hover::after {
+    width: 100%;
+  }
 }
